--- a/project/public/index.html
+++ b/project/public/index.html
@@ -1,51 +1,191 @@
 <!doctype html>
 <html lang="en">
 	<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>MemeMory</title>
+        <title>MemeMory</title>
 
-	<!--- Costum CSS-->
-	<link rel="stylesheet" href="/loginPage.css">
+        <!-- Navigation -->
+        <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
+            <div class="container-fluid px-3">
+                <div class="row displ-content">
+                    <div class="col-4 d-none d-sm-block align-self-start">
+                        <a class="navbar-brand active" href="#">
+                            <img src="https://picsum.photos/70/50" alt="logo" class="img-fluid">
+                        </a>
+                    </div>                
+                    <div class="col-4 text-center d-none d-sm-block align-self-start">
+                        <a class="text-light h1 text-decoration-none">MEMEMORY</a>
+                    </div> 
+                    <div class="col-9 col-sm-4 text-sm-end fw-light align-self-start ">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse justify-content-end" id="navbarToggler">
+                            <ul class="navbar-nav mb-2 mb-lg-0 navbar-right">
+                                <li class="nav-item dropdown pt-3 pt-lg-0">
+                                    <a class="nav-link dropdown-toggle text-light px-3 pl-xl-5" role="button" data-bs-toggle="dropdown">Other Groups</a>
+                                    <ul class="dropdown-menu bg-dark">
+                                        <li><a class="dropdown-item text-light p-2 p-md-3" href="https://gruppe2.testsites.info/">Gruppe 2</a></li>
+                                        <li><a class="dropdown-item text-light p-2 p-md-3" href="https://gruppe3.testsites.info/">Gruppe 3</a></li>
+                                        <li><a class="dropdown-item text-light p-2 p-md-3" href="https://gruppe4.testsites.info/">Gruppe 4</a></li>
+                                        <li><a class="dropdown-item text-light p-2 p-md-3" href="https://gruppe5.testsites.info/">Gruppe 5</a></li>
+                                        <li><a class="dropdown-item text-light p-2 p-md-3" href="https://gruppe6.testsites.info/">Gruppe 6</a></li>
+                                        <li><a class="dropdown-item text-light p-2 p-md-3" href="https://gruppe7.testsites.info/">Gruppe 7</a></li>
+                                        <li><a class="dropdown-item text-light p-2 p-md-3" href="https://gruppe8.testsites.info/">Gruppe 8</a></li>
+                                        <li><a class="dropdown-item text-light p-2 p-md-3" href="https://gruppe9.testsites.info/">Gruppe 9</a></li>
+                                        <li><a class="dropdown-item text-light p-2 p-md-3" href="https://gruppe10.testsites.info/">Gruppe 10</a></li>
+                                    </ul>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light  px-3 pl-xl-5" href="https://gruppe1.testsites.info/beta-test.html">
+                                        <p class="text-danger">Try Beta, Gruppe 1</p>
+                                    </a>                           
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col d-sm-none align-self-start">
+                        <a class="navbar-brand active text-end" href="#">
+                            <img src="https://picsum.photos/70/50" alt="logo" class="img-fluid">
+                        </a>
+                    </div>     
+                </div>
+            </div>
+        </nav>
+
+        <!--- Costum JS --->
+        <script src="Homepage.js"></script>
+
+        <!--- Costum CSS-->
+	    <link rel="stylesheet" href="Homepage.css">
+
+        <!--- Font --->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;800&display=swap" rel="stylesheet">
+
+
 	</head>
-	<body>
-		<div id="x"></div>
+	
+	<body>	              
+        <div class="container-fluid ">
+            <div class="row row-cols-1 row-cols-lg-2 p-3 px-xl-5 justify-content-evenly">
+                <div class="col-6 col-lg-6 p-2 p-xxl-4">
+                    <div class="ratio ratio-1x1 max-height-set-500">
+                        <video autoplay muted loop id="myVideo">
+                            <source src="img/turningCard.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-10 col-md-8 col-lg-6 py-3 px-3 p-lg-4 p-xl-5 my-2 my-lg-auto rounded-3 text-light" id="loginButton">
+                    <div class="container-fluid p-0">
+                        <div class="d-flex justify-content-evenly p-3 p-lg-5 text-center fs-3 fw-light">
+                            <p>Play Memory with the latest memes from Reddit</p>
+                        </div>
+                        <div class="d-flex justify-content-evenly align-items-stretch">
+                            <div class="">
+                                <button type="submit" class="form-control btn btn-primary btn-lg rounded" onclick="showLoginFormInitial()">Sign In</button>
+                            </div>
+                            <div class="">
+                                <button type="submit" class="form-control btn btn-outline-primary btn-lg rounded" onclick="showRegisterFormInitial()">Register</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--- Login Form -->
+                <div class="col-12 col-sm-8 col-md-6 col-lg-4 py-3 px-3 p-sm-5 p-lg-4 p-xl-5 my-2 my-lg-auto rounded-3 text-light visually-hidden" id="loginForm">
+                    <div>
+                        <h3 class="mb-0 mb-lg-4" id="formtext">Sign In</h3>
+                    </div>
+                    <form action="#" class="signin-form mt-2 ">
+                        <div class="form-group mt-1 mt-lg-3">                              
+                            <label for="username">Username</label>
+                            <input type="text" id="loginUsername" class="form-control" placeholder="Username / Email address"required>
+                        </div>
+                        <div class="form-group mt-1 mt-lg-3">
+                            <label for="loginPassword" >Password</label>
+                            <input id="loginPassword" type="password" class="form-control" placeholder="Password" required>
+                        </div>
+                        <div class="form-group mt-3 mt-lg-4">
+                            <button type="submit" class="form-control btn btn-outline-light rounded" onclick="loginUser()">Sign In</button>
+                        </div>
+                        <div class="form-group mt-1 mt-lg-3">
+                            <div class="form-group mt-1 mt-lg-3">
+                                <div class="container-fluid p-0">
+                                    <div class="row row-cols-1 row-cols-sm-2 m-0 ">
+                                        <div class="col col-lg-6 mt-1 mt-lg-3 px-5 px-sm-1">
+                                            <button type="button" class="form-control btn btn-outline-info btn-sm rounded" onclick="showRegisterForm()">New? Register</button>
+                                        </div>
+                                        <div class="col col-lg-6 mt-1 mt-lg-3 px-5 px-sm-1">
+                                            <button type="button" class="form-control btn btn-outline-info btn-sm rounded px-0" onclick="forgotPassword()">Forgot Password</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
+                <!--- Register Form -->
+                <div class="col-12 col-sm-8 col-md-6 col-lg-4 py-3 px-3 p-sm-5 p-lg-4 p-xl-5 my-2 my-lg-auto rounded-3 text-light visually-hidden" id="registerForm" >
+                    <div>
+                        <h3 class="mb-0 mb-lg-4">Register</h3>
+                    </div>
+                    <form action="#" class="signin-form mt-2">
+                        <div class="form-group mt-1 mt-lg-3">                              
+                            <label for="username">Email</label>
+                            <input type="text" id="registerEmail" class="form-control" placeholder="Email address"required>
+                        </div>
+                        <div class="form-group mt-1 mt-lg-3">                              
+                            <label for="username">Username</label>
+                            <input type="text" id="registerUsername" class="form-control" placeholder="Username"required>
+                        </div>
+                        <div class="form-group mt-1 mt-lg-3">
+                            <label for="registerPassword1">Password</label>
+                            <input id="registerPassword1" type="password" class="form-control" placeholder="Password" required>
+                        </div>
+                        <div class="form-group mt-1 mt-lg-3">
+                            <label for="registerPassword2">Repeat Password</label>
+                            <input id="registerPassword2" type="password" class="form-control" placeholder="Password" required>
+                        </div>
+                        <div class="form-group mt-3 mt-lg-4">
+                            <button type="submit" class="form-control btn btn-outline-light rounded" onclick="registerUser()">Register</button>
+                        </div>
+                        <div class="form-group mt-3">
+                            <div class="container-fluid p-0">
+                                <div>
+                                    <button type="button" class="form-control btn btn-outline-info btn-sm rounded" onclick="showLoginForm()">Or Sign In</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <!--- JavaScript --->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 	</body>
 
+    <footer>
+        <div class="container-fluid pt-5">
+            <nav class="fixed-bottom d-flex justify-content-center text-center">
+                <div>
+                    <a class="nav-link text-light px-4 py-2 " href="#">Impressum</a>
+                </div>
+                <div>
+                    <a class="nav-link text-light px-4 py-2" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">don't click</a>
+                </div>
+            </nav>
+        
+        </div>
+    </footer>
+
 </html>
-
-<script>
-	var xmlHttp = new XMLHttpRequest();
-    xmlHttp.open( "GET", 'https://gruppe1.testsites.info/links', false);
-    xmlHttp.send(null);
-
-	var body = JSON.parse(xmlHttp.responseText);
-	
-	for(image of body) {
-		var div = document.createElement("div");
-		div.classList.add("card");
-		div.addEventListener('click', function(event) {
-			addClassByClick(this)
-		});
-		div.innerHTML = `
-						 <div class="card__face card__face--front"><image width="180" height="180" src="${image.link}"></div>
-    		   			 <div class="card__face card__face--back"></div></div>`
- 		
-		var src = document.getElementById("x");
- 		src.appendChild(div);
-	}
-	
-	function addClassByClick(button){
-		if(!button.classList.contains("is-flipped")) {
-			button.classList.add("is-flipped");
-		} else {
-			button.classList.remove("is-flipped");
-		}
-	}
-
-</script>
