Changed HTML-Files to non-static

--- a/project/html/index.html
+++ b/project/html/index.html
@@ -13,7 +13,7 @@
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
     <!--- Custom CSS-->
-    <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="/static/styles/index.css">
 
     <!--- Font --->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -27,10 +27,10 @@
                 <div class="row displ-content">
                     <div class="col-4 d-none d-sm-block align-self-start align-self-lg-center">
                         <a class="navbar-brand active d-block d-lg-none" href="index.html">
-                            <img src="https://picsum.photos/70/50" alt="logo" class="img-fluid">
+                            <img src="https://i.picsum.photos/id/338/70/50.jpg?hmac=vekFJNJE9Q7zEpaT2s9UpSxBz8NNC4m9tIAe9wgo6dA" alt="logo" class="img-fluid">
                         </a>
                         <a class="navbar-brand active d-none d-lg-block" href="index.html">
-                            <img src="https://picsum.photos/400/70" alt="logo" class="img-fluid">
+                            <img src="https://i.picsum.photos/id/42/400/70.jpg?hmac=MCA_hv-pOtJlwxxpHkvN8gA1Rbu29xEl55n8jPJW0As" alt="logo" class="img-fluid">
                         </a>
                     </div>
                     <div class="col-4 text-center d-none d-sm-block align-self-start align-self-lg-center">
@@ -69,7 +69,7 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item align-self-lg-center">
-                                    <a class="nav-link text-light  px-3 pl-xl-5" href="/beta_test.html">
+                                    <a class="nav-link text-light  px-3 pl-xl-5" href="/beta">
                                         <p class="text-danger m-0 fw-bold">Try Beta, Gruppe 1</p>
                                     </a>
                                 </li>
@@ -78,7 +78,7 @@
                     </div>
                     <div class="col d-sm-none align-self-start">
                         <a class="navbar-brand active text-end" href="/index.html">
-                            <img src="https://picsum.photos/70/50" alt="logo" class="img-fluid">
+                            <img src="https://i.picsum.photos/id/338/70/50.jpg?hmac=vekFJNJE9Q7zEpaT2s9UpSxBz8NNC4m9tIAe9wgo6dA" alt="logo" class="img-fluid">
                         </a>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
                 <div class="col-6 col-lg-6 p-2 p-xxl-4">
                     <div>
                         <video autoplay muted loop id="myVideo" class="max-height-set-500 mx-auto">
-                            <source src="/images/homepage_video.mp4" type="video/mp4">
+                            <source src="/static/images/homepage_video.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
@@ -217,8 +217,8 @@
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
     </script>
     <!--- Custom JS --->
-    <script src="/scripts/index.js"></script>
-    <script src="/scripts/cookies.js"></script>
+    <script src="/static/scripts/index.js"></script>
+    <script src="/static/scripts/cookies.js"></script>
 </body>
 
 </html>
