--- a/project/html/beta_test.html
+++ b/project/html/beta_test.html
@@ -13,7 +13,7 @@
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
     <!--- Custom CSS-->
-    <link rel="stylesheet" href="/styles/beta_test.css">
+    <link rel="stylesheet" href="/static/styles/beta_test.css">
 
     <!--- Font --->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -27,10 +27,10 @@
             <div class="row displ-content">
                 <div class="col-4 d-none d-sm-block align-self-start align-self-lg-center">
                     <a class="navbar-brand active d-block d-lg-none" href="#">
-                        <img src="https://picsum.photos/70/50" alt="logo" class="img-fluid">
+                        <img src="https://i.picsum.photos/id/338/70/50.jpg?hmac=vekFJNJE9Q7zEpaT2s9UpSxBz8NNC4m9tIAe9wgo6dA" alt="logo" class="img-fluid">
                     </a>
                     <a class="navbar-brand active d-none d-lg-block" href="#">
-                        <img src="https://picsum.photos/400/70" alt="logo" class="img-fluid">
+                        <img src="https://i.picsum.photos/id/42/400/70.jpg?hmac=MCA_hv-pOtJlwxxpHkvN8gA1Rbu29xEl55n8jPJW0As" alt="logo" class="img-fluid">
                     </a>
                 </div>
                 <div class="col-4 text-center d-none d-sm-block align-self-start align-self-lg-center">
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col d-sm-none align-self-start">
                     <a class="navbar-brand active text-end" href="#">
-                        <img src="https://picsum.photos/70/50" alt="logo" class="img-fluid">
+                        <img src="https://i.picsum.photos/id/338/70/50.jpg?hmac=vekFJNJE9Q7zEpaT2s9UpSxBz8NNC4m9tIAe9wgo6dA" alt="logo" class="img-fluid">
                     </a>
                 </div>
             </div>
@@ -109,7 +109,7 @@
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
     </script>
     <!--- Custom JS -->
-    <script src="/scripts/cookies.js"></script>
+    <script src="/static/scripts/cookies.js"></script>
 
 
 
