Changed validation. Minor Bugfix beta_test.html

--- a/project/html/beta_test.html
+++ b/project/html/beta_test.html
@@ -26,11 +26,13 @@
         <div class="container-fluid px-3">
             <div class="row displ-content">
                 <div class="col-4 d-none d-sm-block align-self-start align-self-lg-center">
-                    <a class="navbar-brand active d-block d-lg-none" href="#">
-                        <img src="https://i.picsum.photos/id/338/70/50.jpg?hmac=vekFJNJE9Q7zEpaT2s9UpSxBz8NNC4m9tIAe9wgo6dA" alt="logo" class="img-fluid">
+                    <a class="navbar-brand active d-block d-lg-none" href="/">
+                        <img src="https://i.picsum.photos/id/338/70/50.jpg?hmac=vekFJNJE9Q7zEpaT2s9UpSxBz8NNC4m9tIAe9wgo6dA"
+                            alt="logo" class="img-fluid">
                     </a>
-                    <a class="navbar-brand active d-none d-lg-block" href="#">
-                        <img src="https://i.picsum.photos/id/42/400/70.jpg?hmac=MCA_hv-pOtJlwxxpHkvN8gA1Rbu29xEl55n8jPJW0As" alt="logo" class="img-fluid">
+                    <a class="navbar-brand active d-none d-lg-block" href="/">
+                        <img src="https://i.picsum.photos/id/42/400/70.jpg?hmac=MCA_hv-pOtJlwxxpHkvN8gA1Rbu29xEl55n8jPJW0As"
+                            alt="logo" class="img-fluid">
                     </a>
                 </div>
                 <div class="col-4 text-center d-none d-sm-block align-self-start align-self-lg-center">
@@ -77,8 +79,9 @@
                     </div>
                 </div>
                 <div class="col d-sm-none align-self-start">
-                    <a class="navbar-brand active text-end" href="#">
-                        <img src="https://i.picsum.photos/id/338/70/50.jpg?hmac=vekFJNJE9Q7zEpaT2s9UpSxBz8NNC4m9tIAe9wgo6dA" alt="logo" class="img-fluid">
+                    <a class="navbar-brand active text-end" href="/">
+                        <img src="https://i.picsum.photos/id/338/70/50.jpg?hmac=vekFJNJE9Q7zEpaT2s9UpSxBz8NNC4m9tIAe9wgo6dA"
+                            alt="logo" class="img-fluid">
                     </a>
                 </div>
             </div>
