home.html first draft

--- a/project/html/index.html
+++ b/project/html/index.html
@@ -14,7 +14,10 @@
 
     <!--- Custom CSS-->
     <link rel="stylesheet" href="/static/styles/index.css">
-
+    
+    <!--- Favicon --->
+    <link rel="shortcut icon" type="image/x-icon" href="/static/images/favicon/favicon.ico">
+    
     <!--- Font --->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;800&display=swap" rel="stylesheet">
@@ -68,6 +71,8 @@
                                                 href="https://gruppe9.testsites.info/">Gruppe 9</a></li>
                                         <li><a class="dropdown-item text-light p-2 p-md-3"
                                                 href="https://gruppe10.testsites.info/">Gruppe 10</a></li>
+                                        <li><a class="dropdown-item text-light p-2 p-md-3"
+                                                href="https://gruppe11.testsites.info/">Gruppe 11</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item align-self-lg-center">
