--- a/project/html/beta_test.html
+++ b/project/html/beta_test.html
@@ -71,6 +71,8 @@
                                             href="https://gruppe9.testsites.info/">Gruppe 9</a></li>
                                     <li><a class="dropdown-item text-light p-2 p-md-3"
                                             href="https://gruppe10.testsites.info/">Gruppe 10</a></li>
+                                    <li><a class="dropdown-item text-light p-2 p-md-3"
+                                            href="https://gruppe11.testsites.info/">Gruppe 11</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item align-self-lg-center">
@@ -115,9 +117,6 @@
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
     </script>
     <!--- Custom JS -->
-    <script src="/static/scripts/cookies.js"></script>
-
-
 
 </body>
 
